style(dynamic-content): add flex-wrap due grid-breaking issues (#1050)

--- a/components/DynamicContent/src/index.scss
+++ b/components/DynamicContent/src/index.scss
@@ -94,6 +94,7 @@
   color: var(--denhaag-dynamic-content-card-content-color);
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: var(--denhaag-dynamic-content-card-content-gap);
 }
 
